--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,7 @@
 @import "variables";
 @import "navbar";
 @import "hero";
+@import "intro";
+@import "guitars";
+@import "players";
+@import "footer";
