--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,42 +1,28 @@
+@import url("https://fonts.googleapis.com/css?family=Sniglet");
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif; }
 
 nav {
-  height: 40px;
+  height: 50px;
   width: 100%;
   background-color: #333;
   color: #eee;
-  position: fixed; }
-
-nav .logo {
-  margin-left: 20px;
   position: fixed;
-  width: 11rem;
-  height: 5rem;
-  background-color: red;
-  float: left;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  clear: both;
-  transition: all 0.5s ease-out; }
-
-.test {
-  transform: scale(0.5);
-  color: yellow; }
+  z-index: 5; }
 
 nav ul {
   padding: 0;
   margin: 0;
   list-style: none;
-  position: relative;
-  left: 197px; }
+  height: 100%; }
 
 nav li {
-  float: left; }
+  float: left;
+  height: 100%; }
 
 nav a {
   display: inline-block;
@@ -45,7 +31,8 @@ nav a {
   text-decoration: none;
   padding: 10px 0;
   color: #eee;
-  text-decoration: none; }
+  text-decoration: none;
+  padding-top: 15px; }
 
 nav li:hover {
   background-color: #555;
@@ -88,7 +75,7 @@ nav a#openup {
     display: inline-block;
     position: absolute;
     right: 5px;
-    top: 20px; }
+    top: 29px; }
   nav a#openup {
     display: block;
     background-color: #333;
@@ -111,4 +98,73 @@ nav a#openup {
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center; }
+  align-items: center;
+  z-index: -1; }
+  .hero__bg-image {
+    width: 100%;
+    height: 100%;
+    background: url("../img/image01--very-hi-res.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(5px);
+    -webkit-filter: blur(5px); }
+  .hero__title {
+    font-size: 2rem;
+    line-height: 1.3;
+    padding-left: 0.5rem;
+    position: absolute;
+    color: #fff; }
+  @media screen and (max-width: 767.8px) {
+    .hero {
+      background: none; } }
+
+.intro {
+  padding: 0 0.5rem;
+  margin-top: 2rem; }
+  .intro__header {
+    font-size: 1.8rem;
+    margin-top: 2rem;
+    text-align: center; }
+  .intro__reasons {
+    margin-top: 1.5rem; }
+    .intro__reasons__item {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 1rem;
+      height: 12.5rem; }
+
+.guitars {
+  margin-top: 2rem; }
+  .guitars__header {
+    text-align: center; }
+  .guitars__card {
+    margin-top: 2rem;
+    background: red;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem; }
+    .guitars__card__item {
+      background: orange;
+      height: 300px;
+      border-radius: 5px; }
+
+.players {
+  margin-top: 2rem;
+  padding: 0 0.5rem; }
+  .players__video {
+    margin-top: 2rem;
+    text-align: center; }
+
+.footer__store-links {
+  background: red;
+  height: 18.75rem; }
+
+.footer__copyright {
+  text-align: center;
+  background: darkslategray;
+  margin-bottom: 0;
+  padding-top: 0.8rem;
+  height: 3rem; }
