--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -3,4 +3,28 @@
   height: 100vh;
   display: flex;
   align-items: center;
+  z-index: -1;
+
+  &__bg-image {
+    width: 100%;
+    height: 100%;
+    background: url("../img/image01--very-hi-res.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+  }
+
+  &__title {
+    font-size: 2rem;
+    line-height: 1.3;
+    padding-left: 0.5rem;
+    position: absolute;
+    color: #fff;
+  }
+
+  @include mediaMd {
+    background: none;
+  }
 }
