--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
-$primary-color: white;
-$secondary-color: white;
-$tertiary-color: white;
+$color-one: #85db18;
+$color-two: #cde855;
+$color-three: #f5f6d4;
+$color-four: #a7c520;
+$color-five: #493f0b;
