--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -121,18 +121,32 @@ nav a#openup {
 
 .intro {
   padding: 0 0.5rem;
-  margin-top: 2rem; }
+  width: 100%; }
+  .intro__lead {
+    margin-top: 2rem; }
   .intro__header {
-    font-size: 1.8rem;
     margin-top: 2rem;
+    font-size: 2rem;
     text-align: center; }
   .intro__reasons {
-    margin-top: 1.5rem; }
+    margin-top: 2rem; }
     .intro__reasons__item {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-gap: 1rem;
-      height: 12.5rem; }
+      text-align: center;
+      margin-top: 3rem; }
+      .intro__reasons__item__grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1rem;
+        max-width: 60rem;
+        height: 20rem;
+        margin-top: 2rem;
+        margin-left: auto;
+        margin-right: auto; }
+        .intro__reasons__item__grid img {
+          width: 100%;
+          height: 100%; }
+        .intro__reasons__item__grid p {
+          text-align: justify; }
 
 .guitars {
   margin-top: 2rem; }
@@ -143,13 +157,20 @@ nav a#openup {
     background: red;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 0.5rem;
+    grid-gap: 1.5rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem; }
     .guitars__card__item {
       background: orange;
-      height: 300px;
-      border-radius: 5px; }
+      height: 20rem; }
+      .guitars__card__item__bg-image {
+        height: 80%; }
+        .guitars__card__item__bg-image img {
+          width: 100%;
+          height: 100%; }
+      .guitars__card__item p {
+        text-align: center;
+        padding-top: 1.3rem; }
 
 .players {
   margin-top: 2rem;
