--- a/scss/_guitars.scss
+++ b/scss/_guitars.scss
@@ -10,14 +10,27 @@
     background: red;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 0.5rem;
+    grid-gap: 1.5rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
 
     &__item {
       background: orange;
-      height: 300px;
-      border-radius: 5px;
+      height: 20rem;
+
+      &__bg-image {
+        height: 80%;
+
+        & img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      & p {
+        text-align: center;
+        padding-top: 1.3rem;
+      }
     }
   }
 }
