--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -1,21 +1,43 @@
 .intro {
   padding: 0 0.5rem;
-  margin-top: 2rem;
+  width: 100%;
+
+  &__lead {
+    margin-top: 2rem;
+  }
 
   &__header {
-    font-size: 1.8rem;
     margin-top: 2rem;
+    font-size: 2rem;
     text-align: center;
   }
 
   &__reasons {
-    margin-top: 1.5rem;
+    margin-top: 2rem;
 
     &__item {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-gap: 1rem;
-      height: 12.5rem;
+      text-align: center;
+      margin-top: 3rem;
+
+      &__grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1rem;
+        max-width: 60rem;
+        height: 20rem;
+        margin-top: 2rem;
+        margin-left: auto;
+        margin-right: auto;
+
+        & img {
+          width: 100%;
+          height: 100%;
+        }
+
+        & p {
+          text-align: justify;
+        }
+      }
     }
   }
 }
