--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -154,23 +154,27 @@ nav a#openup {
     text-align: center; }
   .guitars__card {
     margin-top: 2rem;
-    background: red;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1.5rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem; }
+    grid-gap: 1.5rem; }
     .guitars__card__item {
-      background: orange;
-      height: 20rem; }
+      box-shadow: 0px 0px 8px -3px blue;
+      height: 20rem;
+      transition: all 0.3s ease-out; }
+      .guitars__card__item:hover {
+        transform: scale(1.05);
+        cursor: pointer; }
       .guitars__card__item__bg-image {
-        height: 80%; }
+        height: 85%; }
         .guitars__card__item__bg-image img {
           width: 100%;
           height: 100%; }
       .guitars__card__item p {
         text-align: center;
-        padding-top: 1.3rem; }
+        padding-top: 1rem; }
 
 .players {
   margin-top: 2rem;
