--- a/scss/_guitars.scss
+++ b/scss/_guitars.scss
@@ -7,19 +7,25 @@
 
   &__card {
     margin-top: 2rem;
-    background: red;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1.5rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
 
     &__item {
-      background: orange;
+      box-shadow: 0px 0px 8px -3px blue;
       height: 20rem;
+      transition: all 0.3s ease-out;
+
+      &:hover {
+        transform: scale(1.05);
+        cursor: pointer;
+      }
 
       &__bg-image {
-        height: 80%;
+        height: 85%;
 
         & img {
           width: 100%;
@@ -29,7 +35,7 @@
 
       & p {
         text-align: center;
-        padding-top: 1.3rem;
+        padding-top: 1rem;
       }
     }
   }
