--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -5,6 +5,16 @@ nav {
   color: #eee;
   position: fixed;
   z-index: 5;
+  transition: all 0.4s ease-out;
+}
+
+nav:hover {
+  background-color: #eee;
+  color: #333;
+
+  a {
+    color: #333;
+  }
 }
 
 nav ul {
@@ -17,6 +27,11 @@ nav li {
   // display: inline;
   float: left;
   height: 100%;
+  transition: all 0.3s ease-out;
+}
+
+nav li:hover {
+  border-bottom: 4px solid #333;
 }
 
 nav a {
@@ -29,10 +44,11 @@ nav a {
   text-decoration: none;
   padding-top: 15px;
 }
-nav li:hover {
-  background-color: #555;
-  border-bottom: 4px solid orange;
+
+nav a:hover {
+  text-decoration: none;
 }
+
 nav a#openup {
   display: none;
 }
@@ -84,6 +100,13 @@ nav a#openup {
     background-color: #333;
     width: 100%;
     position: relative;
+  }
+}
+
+@include mediaSXL {
+  nav ul {
+    max-width: 81.875rem;
+    margin: 0 auto;
   }
 }
 
