--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -13,6 +13,7 @@ nav {
   color: #eee;
   position: fixed;
   z-index: 5;
+  box-shadow: 0px 1px 5px #333;
   transition: all 0.4s ease-out; }
 
 nav:hover {
@@ -169,7 +170,7 @@ nav a#openup {
     text-align: center; }
   .guitars__card {
     margin-top: 2rem;
-    max-width: 1200px;
+    max-width: 75rem;
     margin-left: auto;
     margin-right: auto;
     display: grid;
@@ -190,6 +191,16 @@ nav a#openup {
       .guitars__card__item p {
         text-align: center;
         padding-top: 1rem; }
+  .guitars .guitars__modal__body {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); }
+    .guitars .guitars__modal__body__content ul {
+      padding-left: 1.1rem; }
+    .guitars .guitars__modal__body__content button {
+      width: 100%;
+      height: 2rem; }
+      .guitars .guitars__modal__body__content button:last-child {
+        margin-top: 0.5rem; }
 
 .players {
   margin-top: 2rem;
@@ -199,8 +210,21 @@ nav a#openup {
     text-align: center; }
 
 .footer__store-links {
-  background: red;
-  height: 18.75rem; }
+  margin-top: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 81.875rem;
+  padding-top: 1.5rem;
+  border-top: 2px solid #333;
+  height: 22rem;
+  text-align: center; }
+  .footer__store-links img {
+    width: 15rem;
+    margin: 0 1rem;
+    transition: all 0.3s ease-out; }
+    .footer__store-links img:hover {
+      cursor: pointer;
+      transform: scale(1.1); }
 
 .footer__copyright {
   text-align: center;
