--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,7 +1,24 @@
 .footer {
   &__store-links {
-    background: red;
-    height: 18.75rem;
+    margin-top: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 81.875rem;
+    padding-top: 1.5rem;
+    border-top: 2px solid #333;
+    height: 22rem;
+    text-align: center;
+
+    & img {
+      width: 15rem;
+      margin: 0 1rem;
+      transition: all 0.3s ease-out;
+
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+      }
+    }
   }
   &__copyright {
     text-align: center;
