--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,4 @@
-$color-one: #85db18;
-$color-two: #cde855;
-$color-three: #f5f6d4;
-$color-four: #a7c520;
-$color-five: #493f0b;
+$color-one: #101c28;
+$color-two: #222f3f;
+$color-three: #adc4d6;
+$color-four: #f80652;
