--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -9,18 +9,17 @@
 nav {
   height: 50px;
   width: 100%;
-  background-color: #333;
-  color: #eee;
+  background-color: #101c28;
   position: fixed;
   z-index: 5;
-  box-shadow: 0px 1px 5px #333;
+  box-shadow: 0px 1px 5px #101c28;
   transition: all 0.4s ease-out; }
 
 nav:hover {
-  background-color: #eee;
-  color: #333; }
+  background-color: #fff;
+  color: #101c28; }
   nav:hover a {
-    color: #333; }
+    color: #101c28; }
 
 nav ul {
   padding: 0;
@@ -34,7 +33,7 @@ nav li {
   transition: all 0.3s ease-out; }
 
 nav li:hover {
-  border-bottom: 4px solid #333; }
+  border-bottom: 4px solid #101c28; }
 
 nav a {
   display: inline-block;
@@ -42,9 +41,10 @@ nav a {
   text-align: center;
   text-decoration: none;
   padding: 10px 0;
-  color: #eee;
+  color: #fff;
   text-decoration: none;
-  padding-top: 15px; }
+  padding-top: 15px;
+  font-weight: 600; }
 
 nav a:hover {
   text-decoration: none; }
@@ -56,6 +56,8 @@ nav a#openup {
   nav {
     height: auto;
     border-bottom: 0; }
+  nav:hover a {
+    color: #fff; }
   nav .logo {
     display: none; }
   nav ul {
@@ -70,10 +72,11 @@ nav a#openup {
     text-align: left;
     width: 100%;
     text-indent: 25px;
-    background: #333;
-    border-bottom: 1px solid #555; }
+    background: #101c28;
+    color: #fff; }
   nav a:hover {
-    background: #444; }
+    background: #fff;
+    color: #101c28; }
   nav a#openup:after {
     content: "|||";
     transform: rotate(-90deg);
@@ -89,7 +92,6 @@ nav a#openup {
     top: 29px; }
   nav a#openup {
     display: block;
-    background-color: #333;
     width: 100%;
     position: relative; } }
 
@@ -203,11 +205,22 @@ nav a#openup {
         margin-top: 0.5rem; }
 
 .players {
-  margin-top: 2rem;
+  margin-top: 3rem;
   padding: 0 0.5rem; }
   .players__video {
-    margin-top: 2rem;
+    margin-top: 3rem;
     text-align: center; }
+    .players__video iframe {
+      width: 40rem;
+      height: 22.5rem; }
+      @media screen and (max-width: 767.8px) {
+        .players__video iframe {
+          width: 30rem;
+          height: 12.5rem; } }
+      @media screen and (max-width: 600px) {
+        .players__video iframe {
+          width: 100%;
+          height: 100%; } }
 
 .footer__store-links {
   margin-top: 3rem;
