--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -73,7 +73,8 @@ nav a#openup {
     width: 100%;
     text-indent: 25px;
     background: #101c28;
-    color: #fff; }
+    color: #fff;
+    transition: all 0.3s ease-out; }
   nav a:hover {
     background: #fff;
     color: #101c28; }
@@ -89,7 +90,7 @@ nav a#openup {
     display: inline-block;
     position: absolute;
     right: 5px;
-    top: 29px; }
+    top: 25px; }
   nav a#openup {
     display: block;
     width: 100%;
@@ -141,11 +142,14 @@ nav a#openup {
   padding: 0 0.5rem;
   width: 100%; }
   .intro__lead {
-    margin-top: 2rem; }
+    margin-top: 3rem; }
   .intro__header {
-    margin-top: 2rem;
+    margin-top: 3rem;
     font-size: 2rem;
     text-align: center; }
+    @media screen and (max-width: 600px) {
+      .intro__header {
+        font-size: 1.5rem; } }
   .intro__reasons {
     margin-top: 2rem; }
     .intro__reasons__item {
