--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -3,13 +3,17 @@
   width: 100%;
 
   &__lead {
-    margin-top: 2rem;
+    margin-top: 3rem;
   }
 
   &__header {
-    margin-top: 2rem;
+    margin-top: 3rem;
     font-size: 2rem;
     text-align: center;
+
+    @include mediaSm {
+      font-size: 1.5rem;
+    }
   }
 
   &__reasons {
