--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -8,12 +8,33 @@
   &__bg-image {
     width: 100%;
     height: 100%;
-    background: url("../img/image01--very-hi-res.jpg");
+    background: url("../img/image01--low-res.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     filter: blur(5px);
     -webkit-filter: blur(5px);
+
+    @include medium {
+      background: url("../img/image01--mid-res.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    @include large {
+      background: url("../img/image01--hi-res.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    @include veryLarge {
+      background: url("../img/image01--very-hi-res.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   }
 
   &__title {
@@ -22,9 +43,5 @@
     padding-left: 1.5rem;
     position: absolute;
     color: #fff;
-  }
-
-  @include mediaMd {
-    background: none;
   }
 }
