--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -10,8 +10,7 @@
     margin-top: 3rem;
     font-size: 2rem;
     text-align: center;
-
-    @include mediaSm {
+    @include verySmall {
       font-size: 1.5rem;
     }
   }
@@ -23,23 +22,34 @@
       text-align: center;
       margin-top: 3rem;
 
+      @include verySmall {
+        & h4 {
+          font-size: 1.1rem;
+        }
+      }
+
       &__grid {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr;
         grid-gap: 1rem;
         max-width: 60rem;
-        height: 20rem;
         margin-top: 2rem;
         margin-left: auto;
         margin-right: auto;
 
         & img {
           width: 100%;
-          height: 100%;
         }
 
         & p {
-          text-align: justify;
+          text-align: left;
+        }
+
+        @include medium {
+          grid-template-columns: 1fr 1fr;
+          & img {
+            height: 20rem;
+          }
         }
       }
     }
