--- a/scss/_players.scss
+++ b/scss/_players.scss
@@ -9,15 +9,11 @@
     & iframe {
       width: 40rem;
       height: 22.5rem;
+      margin-top: 1rem;
 
-      @include mediaMd {
-        width: 30rem;
-        height: 12.5rem;
-      }
-
-      @include mediaSm {
+      @include verySmall {
         width: 100%;
-        height: 100%;
+        height: 15rem;
       }
     }
   }
